# cluster_chat_project

./: CMakeLists.txt  README.md
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: db.h
include/server/model/: OfflineMessageModel.hpp  UserModel.hpp  friendModel.hpp  group.hpp  groupModel.hpp  groupuser.hpp  user.hpp
include/server/redis/: redis.hpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: OfflineMessageModel.cpp  UserModel.cpp  friendModel.cpp  groupModel.cpp
src/server/redis/: redis.cpp
zpartial-test/: create.sql
zpartial-test/testjson/: 111  testjson.cpp
zpartial-test/testmuduo/: CMakeLists.txt  testmuduo.cpp
